[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/hud_background.png" type="Texture" id=2]
[ext_resource path="res://CustomResources/DynamicFont/Fredoka-21.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/health_over.png" type="Texture" id=4]
[ext_resource path="res://Assets/health_progress.png" type="Texture" id=5]
[ext_resource path="res://Assets/stamina_progress.png" type="Texture" id=6]
[ext_resource path="res://Assets/FredokaOne-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/title.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=3]
resource_name = "ShowStart"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("StartContainer/Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 660, 50 ), Vector2( 660, 50 ), Vector2( 92, 50 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartContainer/StartContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( -650, 472 ), Vector2( -650, 472 ), Vector2( 0, 472 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StartContainer/TutorialContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 680, 350 ), Vector2( 680, 350 ), Vector2( 0, 350 ) ]
}

[node name="UI" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
mouse_filter = 2

[node name="HUD" type="Control" parent="GUI"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
mouse_filter = 2

[node name="Background" type="TextureRect" parent="GUI/HUD"]
margin_right = 600.0
margin_bottom = 128.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HUD"]
editor/display_folded = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -480.0
margin_top = 16.0
margin_right = -20.0
margin_bottom = 120.0
alignment = 1

[node name="HealthContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer"]
editor/display_folded = true
margin_right = 460.0
margin_bottom = 50.0
alignment = 2

[node name="Text" type="Label" parent="GUI/HUD/VBoxContainer/HealthContainer"]
margin_left = 19.0
margin_top = 12.0
margin_right = 105.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
text = "HEALTH"

[node name="HealthBar" type="TextureProgress" parent="GUI/HUD/VBoxContainer/HealthContainer"]
margin_left = 109.0
margin_right = 460.0
margin_bottom = 50.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="StaminaContainer" type="HBoxContainer" parent="GUI/HUD/VBoxContainer"]
editor/display_folded = true
margin_top = 54.0
margin_right = 460.0
margin_bottom = 104.0
alignment = 2

[node name="Text" type="Label" parent="GUI/HUD/VBoxContainer/StaminaContainer"]
margin_left = 8.0
margin_top = 12.0
margin_right = 105.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.92549, 0.839216, 1 )
text = "STAMINA"

[node name="StaminaBar" type="TextureProgress" parent="GUI/HUD/VBoxContainer/StaminaContainer"]
margin_left = 109.0
margin_right = 460.0
margin_bottom = 50.0
value = 100.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 6 )

[node name="Kills" type="Label" parent="GUI/HUD"]
margin_left = 16.0
margin_top = 16.0
margin_right = 112.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.666667, 0.368627, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.411765, 0.478431, 1 )
custom_constants/shadow_offset_x = 2
text = "###"
align = 1
valign = 1

[node name="RestartContainer" type="Control" parent="GUI"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="GUI/RestartContainer"]
margin_top = 240.0
margin_right = 600.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0.0509804, 0.168627, 0.270588, 1 )

[node name="Label" type="Label" parent="GUI/RestartContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.5
margin_top = -29.5
margin_right = 204.5
margin_bottom = 29.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.666667, 0.368627, 1 )
text = "punch to restart"

[node name="StartContainer" type="Control" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="TextureRect" parent="GUI/StartContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 360.0
margin_top = -250.0
margin_right = 776.001
margin_bottom = -98.0
texture = ExtResource( 8 )

[node name="StartContainer" type="Control" parent="GUI/StartContainer"]
margin_left = -650.0
margin_top = 480.0
margin_right = -50.0
margin_bottom = 608.0

[node name="ColorRect" type="ColorRect" parent="GUI/StartContainer/StartContainer"]
margin_right = 600.0
margin_bottom = 128.0
mouse_filter = 2
color = Color( 0.329412, 0.305882, 0.407843, 1 )

[node name="Label" type="Label" parent="GUI/StartContainer/StartContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -29.5
margin_right = 231.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.831373, 0.639216, 1 )
text = "punch (K) to start"
align = 1
valign = 1

[node name="TutorialContainer" type="Control" parent="GUI/StartContainer"]
editor/display_folded = true
margin_left = 680.0
margin_top = 350.0
margin_right = 1280.0
margin_bottom = 454.0

[node name="ColorRect" type="ColorRect" parent="GUI/StartContainer/TutorialContainer"]
margin_right = 600.0
margin_bottom = 104.0
mouse_filter = 2
color = Color( 0.329412, 0.305882, 0.407843, 1 )

[node name="Label" type="Label" parent="GUI/StartContainer/TutorialContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -29.5
margin_right = 231.0
margin_bottom = 29.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.831373, 0.639216, 1 )
text = "block (D) to learn"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI"]
anims/ShowStart = SubResource( 3 )

